# TEMPLATE_PROJECT_WITH_CMAKE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Flow.ps1  Flow.sh  config.h.in
.cache/clangd/index/: main.c.27F9AC9D29537628.idx  testfile.c.DD7A2DB5861206C4.idx
DynamicLib/: .clang-format
DynamicLib/src/: CMakeLists.txt  dll_example.c  dll_example.h
DynamicLib/src/example_module/: CMakeLists.txt
EXEC/assets/: CMakeLists.txt
EXEC/src/: CMakeLists.txt
EXEC/src/config/: config.h.in
EXEC/src/example_module/: source_header.h
EXEC/unit_tests/: CMakeLists.txt
StaticLib/: .gitignore  CMakeLists.txt  Readme.md
StaticLib/docs/: CMakeLists.txt
StaticLib/src/: CMakeLists.txt  lib_example.c  lib_example.h
StaticLib/src/config/: CMakeLists.txt
StaticLib/unit_tests/example_module/: CMakeLists.txt  example_test.cpp
StaticLibCVI/: CMakeSettings.json  License.txt
StaticLibCVI/docs/: Doxyfile.in
StaticLibCVI/src/: CMakeLists.txt  main.c
StaticLibCVI/src/example_module/: CMakeLists.txt  source_file.c
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/html/: dir_0d4345bb4099aeaa06c1bd38ea2cf2b5.html  dir_0d4345bb4099aeaa06c1bd38ea2cf2b5.js  dir_0d4345bb4099aeaa06c1bd38ea2cf2b5_dep.map  dir_0d4345bb4099aeaa06c1bd38ea2cf2b5_dep.md5  dir_24f9f36401b59cdfee5738ce20e7949a.html  dir_24f9f36401b59cdfee5738ce20e7949a.js  dir_24f9f36401b59cdfee5738ce20e7949a_dep.map  dir_24f9f36401b59cdfee5738ce20e7949a_dep.md5  dir_320aab13ce9c6ac1e0d5c580aef242be.html  dir_320aab13ce9c6ac1e0d5c580aef242be.js  dir_422b3d22c0e5f0d80cd4da0aa39b813c.html  dir_422b3d22c0e5f0d80cd4da0aa39b813c.js  dir_422b3d22c0e5f0d80cd4da0aa39b813c_dep.map  dir_422b3d22c0e5f0d80cd4da0aa39b813c_dep.md5  dir_4703e74371e7e4eb16c552ee819da51c.html  dir_4703e74371e7e4eb16c552ee819da51c.js  dir_4703e74371e7e4eb16c552ee819da51c_dep.map  dir_4703e74371e7e4eb16c552ee819da51c_dep.md5  dir_602aa9bf8cc383100af9bb7d24bcde09.html  dir_602aa9bf8cc383100af9bb7d24bcde09.js  dir_602aa9bf8cc383100af9bb7d24bcde09_dep.map  dir_602aa9bf8cc383100af9bb7d24bcde09_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f424bb044705b82227cb576a1d0a97b9.html  dir_f424bb044705b82227cb576a1d0a97b9.js  dir_f424bb044705b82227cb576a1d0a97b9_dep.map  dir_f424bb044705b82227cb576a1d0a97b9_dep.md5  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  md__readme.html  navtree.css  (+4 more)
docs/html/search/: search.css
docs/latex/: files.tex  main_8c.tex  main_8c__incl.md5  md__readme.tex  refman.tex
src/: main.c
test/: CMakeLists.txt  test.cpp
